--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Click==7.0
-Flask==1.1.1
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-Pillow==6.2.0
-pkg-resources==0.0.0
-Werkzeug==0.15.5
+click==8.1.3
+Flask==2.1.2
+importlib-metadata==4.11.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+Pillow==9.1.1
+Werkzeug==2.1.2
+zipp==3.8.0
