--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 blinker==1.7.0
 click==8.1.3
-flask==3.0.2
+flask==3.0.3
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
-Pillow==9.1.1
+pillow==10.3.0
 werkzeug==3.0.1
 zipp==3.8.0
