--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-blinker==1.7.0
-click==8.1.3
+blinker==1.8.2
+click==8.1.7
 flask==3.0.3
-importlib-metadata==4.11.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
+importlib-metadata==8.0.0
+itsdangerous==2.2.0
+jinja2==3.1.4
+MarkupSafe==2.1.5
 pillow==10.3.0
-werkzeug==3.0.1
-zipp==3.8.0
+werkzeug==3.0.3
+zipp==3.19.2
